--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -359,6 +359,7 @@
     - AllAccess #Randomized access would be fun. AllAccess is the best i can think of right now that does make it too hard for it to enter the station or navigate it..
   - type: AccessReader
     access: [["Command"], ["Research"]]
+#SS220 languages revive begin
   - type: Language
     availableLanguages:
     - id: Galactic
@@ -389,6 +390,7 @@
     - id: Canilunzt
       canSpeak: false
     - id: Binary
+#SS220 languages revive end
   - type: StartIonStormed
     ionStormAmount: 3
   - type: IonStormTarget
