--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/passenger.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/passenger.yml
@@ -1,22 +1,34 @@
 # Greytide Time
 - type: loadoutEffectGroup
   id: GreyTider
+  requireAll: false
   effects:
   - !type:JobRequirementLoadoutEffect
     requirement:
       !type:RoleTimeRequirement
       role: JobPassenger
       time: 36000 #10 hrs, silly reward for people who play passenger a lot
+  sponsorTierLoadoutEffects:
+  - !type:GroupLoadoutEffect
+    proto: SeniorDevTeamTier
+  - !type:GroupLoadoutEffect
+    proto: AdministratorSponsorTier
 
 # Head of Greytide (for grey mantle)
 - type: loadoutEffectGroup
   id: MasterGrey
+  requireAll: false
   effects:
   - !type:JobRequirementLoadoutEffect
     requirement:
       !type:RoleTimeRequirement
       role: JobPassenger
       time: 72000 #20 hrs, fun mantle for the most experienced greytiders
+    sponsorTierLoadoutEffects:
+    - !type:GroupLoadoutEffect
+      proto: SeniorDevTeamTier
+    - !type:GroupLoadoutEffect
+      proto: AdministratorSponsorTier
 
 # Face
 - type: loadout
