--- a/Resources/Prototypes/SS220/Roles/play_time_trackers.yml
+++ b/Resources/Prototypes/SS220/Roles/play_time_trackers.yml
@@ -34,6 +34,9 @@
 - type: playTimeTracker
   id: Prisoner
 
+- type: playTimeTracker
+  id: JobExplorer
+
 # Antags
 - type: playTimeTracker
   id: AntagNukeops
