--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -140,6 +140,7 @@
   roles:
   - ResearchDirector
   - SeniorResearcher #ss220
+  - Explorer #SS220 Add Explorer
   - Scientist
   - ResearchAssistant
 
