--- a/Resources/Prototypes/SS220/StatusIcons/job.yml
+++ b/Resources/Prototypes/SS220/StatusIcons/job.yml
@@ -5,3 +5,11 @@
     sprite: /Textures/SS220/Interface/Misc/job_icons.rsi
     state: magistrate
   jobName: job-name-magistrate
+
+- type: jobIcon
+  parent: JobIcon
+  id: JobIconExplorer
+  icon:
+    sprite: /Textures/SS220/Interface/Misc/job_icons.rsi
+    state: explorer
+  jobName: job-name-explorer
