--- a/Resources/Prototypes/SS220/Entities/Clothing/Uniforms/Jumpsuit/turtleneck.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Uniforms/Jumpsuit/turtleneck.yml
@@ -109,3 +109,15 @@
     sprite: SS220/Clothing/Uniforms/Jumpsuit/brigmedic_turtle.rsi
   - type: Clothing
     sprite: SS220/Clothing/Uniforms/Jumpsuit/brigmedic_turtle.rsi
+
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformJumpsuitExplorerTurtleneck
+  name: explorer turtleneck
+  description: A uniform created for those who seek to explore the unexplored corners of the cosmos.
+  suffix: For playtime
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Uniforms/Jumpsuit/explorer_turtle.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Uniforms/Jumpsuit/explorer_turtle.rsi
