--- a/Resources/Prototypes/SS220/Entities/JobSpawners/seniorMark.yml
+++ b/Resources/Prototypes/SS220/Entities/JobSpawners/seniorMark.yml
@@ -66,7 +66,7 @@
   - type: SpawnPoint
     job_id: Explorer
   - type: Sprite
-    sprite:
+    sprite: SS220/Markers/jobs.rsi
     layers:
       - state: green
       - state: explorer
