--- a/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/coats.yml
@@ -203,6 +203,30 @@
         Caustic: 0.75
         Radiation: 0.9
 
+- type: entity
+  parent: ClothingOuterStorageBase
+  id: ClothingOuterExplorerCoat
+  name: the explorer coat
+  description: Explorer's coat with embedded metal plates. Protects well from all kinds of critters.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/OuterClothing/Coats/explorer.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/OuterClothing/Coats/explorer.rsi
+  - type: TemperatureProtection
+    heatingCoefficient: 0.1
+    coolingCoefficient: 0.1
+  - type: ExplosionResistance
+    damageCoefficient: 0.9
+  - type: Armor
+    modifiers:
+      coefficients:
+        Heat: 0.8
+        Blunt: 0.7
+        Slash: 0.7
+        Piercing: 0.6
+        Caustic: 0.8
+
 # Сервис
 - type: entity
   parent: ClothingOuterStorageBase
