--- a/Resources/Prototypes/SS220/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/SS220/Loadouts/role_loadouts.yml
@@ -137,6 +137,22 @@
 #  - Glasses #SS220-TwoOne-Floppa-Iteration
   - Trinkets
   - SponsorNeck #SS220-TwoOne-Floppa-Iteration
+
+  # Исследователь
+- type: roleLoadout
+  id: JobExplorer
+  groups:
+  - ExplorerHead
+  - GroupTankHarness
+  - ExplorerJumpsuit
+  - SalvageSpecialistBackpack
+  - ExplorerOuterClothing
+  - SalvageSpecialistShoes
+  - SurvivalExtended
+  - Glasses
+  - Trinkets
+  - GroupSpeciesBreathTool
+  - SponsorNeck
 #! Исследовательский отдел (Конец)
 
 #! Сервис (Начало)
