--- a/Resources/Prototypes/Catalog/Cargo/cargo_vending.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_vending.yml
@@ -32,7 +32,7 @@
     sprite: Objects/Specific/Service/vending_machine_restock.rsi
     state: base
   product: CrateVendingMachineRestockClothesFilled
-  cost: 2440 #2500 #SS220 New years cap Begin \ Вернуть после нового года
+  cost: 2460 #ss220 brown shoes
   category: cargoproduct-category-name-service
   group: market
 
