--- a/Resources/Prototypes/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/Catalog/uplink_catalog.yml
@@ -2240,6 +2240,13 @@
     whitelist:
     - Clown
     - HeadOfPersonnel
+  #ss220 holoclown-Nukeops begin
+  - !type:StoreWhitelistCondition
+    blacklist:
+     tags:
+        - NukeOpsUplink
+        - LoneOpsUplink
+  #ss220 holoclown-Nukeops end
 
 - type: listing
   id: uplinkHotPotato
